--- a/src/app/master/party/party.component.html
+++ b/src/app/master/party/party.component.html
@@ -26,7 +26,6 @@
             <option value="CHA">CHA</option>
             <option value="B">Broker</option>
             <option value="N">Notify Party</option>
-            <option value="SLOT">Slot Operator</option>
           </select>
         </div>
       </div>
@@ -99,99 +98,97 @@
 </div>
 <div class="modal fade" #customerModal id="customerModal" tabindex="-1" aria-labelledby="exampleModalLabel"
   aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Customer Details</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" #closeBtn></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="partyForm">
-          <div class="col-md-12">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label class="form-label2">Name<span class="text-danger"> *</span></label>
-                  <input maxlength="500" type="text" id="name" [ngClass]="{'invalid':submitted && f.CUST_NAME.errors}"
-                    formControlName="CUST_NAME" class="form-control2">
-                  <div *ngIf="submitted && f.CUST_NAME.errors?.required" class="invalid-feedback">Name is required
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label class="form-label2">Address<span class="text-danger"> *</span></label>
-                  <textarea maxlength="500" type="text" id="address"
-                    [ngClass]="{'invalid':submitted && f.CUST_ADDRESS.errors}" formControlName="CUST_ADDRESS"
-                    class="form-control2"></textarea>
-                  <div *ngIf="submitted && f.CUST_ADDRESS.errors?.required" class="invalid-feedback">Address is required
-                  </div>
-                </div>
-              </div>
+        <div class="accordion mt-3" id="accordion" role="tablist">
+          <div class="card">
+            <div class="card-header" role="tab" id="heading-1">
+              <h6 class="mb-0">
+                <a data-bs-toggle="collapse" href="#collapse-1" aria-expanded="false" aria-controls="collapse-1"
+                  data-abc="true" class="collapsed">
+                  <span class="fw-bolder">General Details</span>
+                </a>
+              </h6>
             </div>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label class="form-label2">Email</label>
-                  <input maxlength="255" type="text" id="CustomerEmail"
-                    [ngClass]="{'invalid':submitted && f.CUST_EMAIL.errors}" formControlName="CUST_EMAIL"
-                    class="form-control2">
-                  <div *ngIf="submitted && f.CUST_EMAIL.errors?.email" class="invalid-feedback">Email is invalid
+            <div id="collapse-1" class="collapse show" role="tabpanel" aria-labelledby="heading-1"
+              data-bs-parent="#accordion">
+              <div class="card-body">
+                <div class="row mt-4">
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <input type="text" class="form-control">
+                      <label class="form-label">Customer Name <span class="text-danger"> *</span></label>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <ng-select>
+                        <ng-option disabled="true">--Select--</ng-option>
+                        <ng-option>India</ng-option>
+                      </ng-select>
+                      <label class="form-label-ddl">Country <span class="text-danger"> *</span></label>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <ng-select>
+                        <ng-option disabled="true">--Select--</ng-option>
+                        <ng-option>Maharashtra</ng-option>
+                      </ng-select>
+                      <label class="form-label-ddl">State <span class="text-danger"> *</span></label>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group" *ngIf="isGST">
-                  <label class="form-label2">GST No<span class="text-danger"> *</span></label>
-                  <input maxlength="15" type="text" id="gstin" [ngClass]="{'invalid':submitted && f.GSTIN.errors}"
-                    formControlName="GSTIN" class="form-control2">
-                  <div *ngIf="submitted && f.GSTIN.errors?.pattern" class="invalid-feedback">GST No is invalid
+                <div class="row mt-4">
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <ng-select>
+                        <ng-option disabled="true">--Select--</ng-option>
+                        <ng-option>Navi Mumbai</ng-option>
+                      </ng-select>
+                      <label class="form-label-ddl">City <span class="text-danger"> *</span></label>
+                    </div>
                   </div>
-                  <div *ngIf="submitted && f.GSTIN.errors?.required" class="invalid-feedback">GST No is required
-                  </div>
-                </div>
-                <div class="form-group" *ngIf="!isGST">
-                  <label class="form-label2">Vat No/ License No<span class="text-danger"> *</span></label>
-                  <input maxlength="30" type="text" id="gstin" [ngClass]="{'invalid':submitted && f.VAT_NO.errors}"
-                    formControlName="VAT_NO" class="form-control2">
-                  <div *ngIf="submitted && f.VAT_NO.errors?.required" class="invalid-feedback">Vat No is required
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label class="form-label2" style="z-index: 1;">Type <span class="text-danger"> *</span></label>
-                  <ng-multiselect-dropdown #multiSelect [ngClass]="{'invalid':submitted && f.CUST_TYPE_CODE.errors}"
-                    [placeholder]="'Select Type'" [settings]="dropdownSettings" [formControl]="f.CUST_TYPE_CODE"
-                    [data]="custTypeList" [(ngModel)]="selectedItems">
-                  </ng-multiselect-dropdown>
-                  <div *ngIf="submitted && f.CUST_TYPE_CODE.errors" class="invalid-feedback">Type is required
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label class="form-label2">Contact No</label>
-                  <input (keypress)="onlyNumeric($event)" maxlength="10" type="text" formControlName="CUST_CONTACT"
-                    class="form-control2">
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6 mt-4">
-                <div class="form-group">
-                  <div class="form-check form-switch">
-                    <input formControlName="STATUS" class="form-check-input" type="checkbox" role="switch" />
-                    <label class="form-check-label">Status</label>
-                  </div>
-                  <div *ngIf="submitted && f.STATUS.errors" class="invalid-feedback">Status is required </div>
                 </div>
               </div>
             </div>
           </div>
-        </form>
+          <div class="card">
+            <div class="card-header" role="tab" id="heading-4">
+              <h6 class="mb-0">
+                <a data-bs-toggle="collapse" href="#collapse-4" aria-expanded="false" aria-controls="collapse-4"
+                  data-abc="true" class="collapsed">
+                  <span class="fw-bolder">POL Charges</span>
+                </a>
+              </h6>
+            </div>
+            <div id="collapse-4" class="collapse" role="tabpanel" aria-labelledby="heading-4"
+              data-bs-parent="#accordion">
+              <div class="card-body">
+
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" role="tab" id="heading-5">
+              <h6 class="mb-0">
+                <a data-bs-toggle="collapse" href="#collapse-5" aria-expanded="false" aria-controls="collapse-5"
+                  data-abc="true" class="collapsed">
+                  <span class="fw-bolder">POD Charges</span>
+                </a>
+              </h6>
+            </div>
+            <div id="collapse-5" class="collapse" role="tabpanel" aria-labelledby="heading-5"
+              data-bs-parent="#accordion">
+
+            </div>
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button *ngIf="!isUpdate" (click)="InsertPartyMaster()" class="form-btn">Save</button>
