table header changes

--- a/src/app/master/charge-master/charge-master.component.html
+++ b/src/app/master/charge-master/charge-master.component.html
@@ -49,10 +49,10 @@
       <thead>
           <tr>
               <th width="1%">No</th>
-              <th width="12%">CHARGE_NAME</th>
-              <th width="14%">CHARGE_HEADER</th>
-              <th width="14%">APPLICABLE_FOR</th>
-              <th width="14%">GST_PERCENTAGE</th>
+              <th width="12%">CHARGE NAME</th>
+              <th width="14%">CHARGE HEADER</th>
+              <th width="14%">APPLICABLE FOR</th>
+              <th width="14%">GST PERCENTAGE</th>
               <th width="14%">Currency</th>
               <th width="14%">HSN Code</th>
               <th width="14%">Charge Amount</th>
