--- a/src/app/shared/pm-sidebar/pm-sidebar.component.html
+++ b/src/app/shared/pm-sidebar/pm-sidebar.component.html
@@ -196,7 +196,7 @@
                         <!--  -->
                         <li [class]="submenu == 'charges-master' ? 'menu-item active' : 'menu-item'">
                           <a (click)="redirectToSubMenu('charges-master')" class="menu-link pointer">
-                              <div data-i18n="Alerts">charges-master</div>
+                              <div data-i18n="Alerts">charge master</div>
                           </a>
                       </li>
                         <!--  -->
