--- a/src/app/shared/pm-sidebar/pm-sidebar.component.html
+++ b/src/app/shared/pm-sidebar/pm-sidebar.component.html
@@ -201,7 +201,7 @@
                       </li>
                       <li [class]="submenu == 'vendor' ? 'menu-item active' : 'menu-item'">
                         <a (click)="redirectToSubMenu('vendor')" class="menu-link pointer">
-                            <div data-i18n="Alerts">charge master</div>
+                            <div data-i18n="Alerts">vendor</div>
                         </a>
                     </li>
                         <!--  -->
