--- a/src/app/home/operation/invoice-list2/invoice-list2.component.html
+++ b/src/app/home/operation/invoice-list2/invoice-list2.component.html
@@ -8,50 +8,63 @@
         <div class="row">
           <div class="col-md-3">
             <div class="form-group">
-              <label class="form-label2" readonly>Invoice Type<span class="text-danger"> *</span></label>
-              <input type="text" formControlName="INVOICE_TYPE" class="form-control2" maxlength="20" readonly />
-
-              <!-- <select formControlName="INVOICE_TYPE" class="form-control2">
-                <option disabled value="">--Select--</option>
-                <option>FREIGHT</option>
-                <option>LOCAL</option>
-              </select> -->
+              <label class="label-header">Invoice Type</label>
+              <label class="label-subheader">{{f.INVOICE_TYPE.value}}</label>
             </div>
           </div>
-
           <div class="col-md-3">
             <div class="form-group">
-              <label class="form-label2">Bill To<span class="text-danger"> *</span></label>
-              <select formControlName="BILL_TO" class="form-control2">
-                <option disabled value="">--Select--</option>
-              </select>
+              <label class="label-header">Bill From</label>
+              <label class="label-subheader">{{f.BILL_FROM.value}}</label>
+              <!-- <label class="label-subheader">{{f.BILL_FROM.value}}</label> -->
+
             </div>
           </div>
-
           <div class="col-md-3">
-            <div class="pull-right">
-              <label class="form-label2">Bill From<span class="text-danger"> *</span></label>
-              <!-- <select formControlName="BILL_FROM" class="form-control2">
-                <option disabled value="">--Select--</option>
-                <option>PRINCIPAL</option>
-                <option>AGENT</option>
-              </select> -->
+            <div class="form-group">
+              <label class="label-header">Shipper</label>
+              <label class="label-subheader">{{f.SHIPPER_NAME.value}}</label>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="form-group">
+              <label class="label-header">Payment Term</label>
+              <label class="label-subheader">Prepaid</label>
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row mt-4">
           <div class="col-md-3">
             <div class="form-group">
-              <label class="form-label2">Shipper Name<span class="text-danger" readonly>
-                  *</span></label>
-              <input type="text" formControlName="SHIPPER_NAME" class="form-control2" maxlength="20" readonly />
+              <ng-select formControlName="BILL_TO">
+                <ng-option disabled value="">--Select--</ng-option>
+                <ng-option *ngFor="let item of BillFromList" value="{{item.CODE}}">{{item.CODE}}</ng-option>
+              </ng-select>
+              <label class="form-label-ddl">Bill To<span class="text-danger"> *</span></label>
             </div>
           </div>
           <div class="col-md-3">
             <div class="form-group">
-              <label class="form-label2">Payment Term<span class="text-danger"> *</span></label>
-              <input type="text" formControlName="PAYMENT_TERM" class="form-control2" maxlength="20" />
+              <input type="date" class="form-control" formControlName="INVOICE_DATE">
+              <label class="form-label">Invoice Date</label>
             </div>
+          </div>
+          <div class="col-md-3">
+            <form [formGroup]="containerForm">
+              <div class="form-group">
+                <!-- <label class="form-label2" style="z-index: 1;">Container</label> -->
+                <ng-multiselect-dropdown (onSelectAll)="saveContainer($event,1)"
+                  (onDeSelectAll)="saveContainer($event,2)" (onSelect)="saveContainer($event)"
+                  (onDeSelect)="saveContainer($event)" #multiSelect [placeholder]="'Select Container'"
+                  [settings]="dropdownSettings" [formControl]="f.CONTAINER_LIST1" [data]="containerDropdownList">
+                </ng-multiselect-dropdown>
+                <!-- <ng-select formControlName="CONTAINER">
+                <ng-option disabled value="">--Select--</ng-option>
+                <ng-option></ng-option>
+              </ng-select> -->
+                <label class="form-label-ddl">Container No<span class="text-danger"> *</span></label>
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -61,120 +74,136 @@
     </div>
   </div>
   <h6>Charge List</h6>
-<div class="table-responsive">
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>Sr No</th>
-        <th>Charge Name</th>
-        <th>Exchange Rate</th>
-        <th>Quantity</th>
-        <th>Amount</th>
-        <th>HSN Code</th>
-        <th>Requested Amount</th>
-        <th>Currency</th>
-        <th>Exempt Flag</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of f1; let i = index" [formGroup]="item">
-        <td>{{ i + 1 }}</td>
-        <td>
-          <ng-select *ngIf="!item.value.IS_SRRCHARGE" formControlName="CHARGE_NAME"
-            [ngClass]="{'invalid': submitted && f.BL_LIST.controls[i].get('CHARGE_NAME').errors}">
-            <ng-option disabled="true">--Select--</ng-option>
-            <ng-option *ngFor="let item of ChargeMasterList"
-              value="{{item.CHARGE_NAME}}">{{item.CHARGE_NAME}}</ng-option>
+  <div class="table-responsive">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>No</th>
+          <th>Charge</th>
+          <th>Ex Rate</th>
+          <th>Qty</th>
+          <th>Amount</th>
+          <th>HSN Code</th>
+          <th>Requested Amount</th>
+          <th>Currency</th>
+          <th>Exempt Flag</th>
+          <th>Tax %</th>
+          <th>IGST</th>
+          <th>SGST</th>
+          <th>CGST</th>
+          <th>Tax Amount</th>
+          <th>Total Amount</th>
 
-          </ng-select>
-          <span *ngIf="item.value.IS_SRRCHARGE">{{item.value.CHARGE_NAME}}</span>
-          <div *ngIf="submitted && f.BL_LIST.controls[i].get('CHARGE_NAME').errors" class="invalid-feedback">Charge
-            Name is required
-          </div>
-        </td>
 
-        <td> <input *ngIf="item.value.IS_SRRCHARGE != '1'" type="text"
-            [ngClass]="{ invalid: submitted && f.BL_LIST.controls[i].get('EXCHANE_RATE').errors}"
-            formControlName="EXCHANE_RATE" class="form-control" />
-          <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.EXCHANE_RATE}}</span>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of f1; let i = index" [formGroup]="item">
+          <td>{{ i + 1 }}</td>
+          <td>
+            <select *ngIf="!item.value.IS_SRRCHARGE" class="form-control3" formControlName="CHARGE_NAME"
+              [ngClass]="{'invalid': submitted && f.BL_LIST.controls[i].get('CHARGE_NAME').errors}">
+              <option disabled="true">--Select--</option>
+              <option *ngFor="let item of ChargeMasterList" value="{{item.CODE}}">{{item.CODE}}</option>
 
-          <div *ngIf=" submitted && f.BL_LIST.controls[i].get('EXCHANE_RATE').errors" class="invalid-feedback">
-            Exchange Rate is required
-          </div>
-        </td>
+            </select>
+            <span *ngIf="item.value.IS_SRRCHARGE">{{item.value.CHARGE_NAME}}</span>
+          </td>
 
-        <td>
-          <input *ngIf="item.value.IS_SRRCHARGE != '1'" type="text"
-            [ngClass]="{ invalid: submitted && f.BL_LIST.controls[i].get('QUANTITY').errors}"
-            formControlName="QUANTITY" class="form-control" />
-          <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.QUANTITY}}</span>
-          <div *ngIf="submitted && f.BL_LIST.controls[i].get('QUANTITY').errors" class="invalid-feedback"> Quantity is
-            required
-          </div>
-        </td>
+          <td> <input type="text" [ngClass]="{ invalid: submitted && f.BL_LIST.controls[i].get('EXCHANE_RATE').errors}"
+              formControlName="EXCHANE_RATE" class="form-control3" />
 
-        <td>
-          <input *ngIf="item.value.IS_SRRCHARGE != '1'" type="text"
-            [ngClass]="{invalid:submitted && f.BL_LIST.controls[i].get('AMOUNT').errors }" formControlName="AMOUNT"
-            class="form-control" />
-          <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.AMOUNT}}</span>
-          <div *ngIf="submitted && f.BL_LIST.controls[i].get('AMOUNT').errors" class="invalid-feedback">
-            Amount is required
-          </div>
-        </td>
+          </td>
 
-        <td>
-          <input *ngIf="item.value.IS_SRRCHARGE != '1'" type="text"
-            [ngClass]="{invalid:submitted && f.BL_LIST.controls[i].get('HSN_CODE').errors}" formControlName="HSN_CODE"
-            class="form-control" />
-          <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.HSN_CODE}}</span>
-          <div *ngIf=" submitted && f.BL_LIST.controls[i].get('HSN_CODE').errors" class="invalid-feedback"> HSN Code
-            is required </div>
-        </td>
+          <td>
+            <input *ngIf="item.value.IS_SRRCHARGE != '1'" type="text"
+              [ngClass]="{ invalid: submitted && f.BL_LIST.controls[i].get('QUANTITY').errors}"
+              formControlName="QUANTITY" class="form-control3" />
+            <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.QUANTITY}}</span>
+          </td>
 
-        <td>
-          <input type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
-            [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('REQUESTED_AMOUNT').errors}"
-            formControlName="REQUESTED_AMOUNT" class="form-control" />
-          <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.REQUESTED_AMOUNT}}</span>
-          <div *ngIf="submitted && f.BL_LIST.controls[i].get('REQUESTED_AMOUNT').errors" class="invalid-feedback">
-            Requested Amount is required
-          </div>
-        </td>
+          <td>
+            <input *ngIf="item.value.IS_SRRCHARGE != '1'" type="text"
+              [ngClass]="{invalid:submitted && f.BL_LIST.controls[i].get('AMOUNT').errors }" formControlName="AMOUNT"
+              class="form-control3" />
+            <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.AMOUNT}}</span>
+          </td>
 
-        <td>
-          <ng-select *ngIf="item.value.IS_SRRCHARGE != '1'" formControlName="CURRENCY"
-            [ngClass]="{'invalid': submitted && f.BL_LIST.controls[i].get('CURRENCY').errors}">
-            <ng-option disabled="true">--Select--</ng-option>
-            <ng-option *ngFor="let item of CurrencyList" value="{{item.CODE}}">{{item.CODE}}</ng-option>
-          </ng-select>
-          <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.CURRENCY}}</span>
-          <div *ngIf="submitted && f.BL_LIST.controls[i].get('CURRENCY').errors" class="invalid-feedback">Currency is
-            required
-          </div>
-        </td>
+          <td>
+            <input *ngIf="item.value.IS_SRRCHARGE != '1'" type="text"
+              [ngClass]="{invalid:submitted && f.BL_LIST.controls[i].get('HSN_CODE').errors}" formControlName="HSN_CODE"
+              class="form-control3" />
+            <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.HSN_CODE}}</span>
+            <div *ngIf=" submitted && f.BL_LIST.controls[i].get('HSN_CODE').errors" class="invalid-feedback"> HSN Code
+              is required </div>
+          </td>
 
-        <td>
-          <input *ngIf="item.value.IS_SRRCHARGE != '1'" type="text"
-            [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('EXEMPT_FLAG').errors}"
-            formControlName="EXEMPT_FLAG" class="form-control" />
-          <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.EXEMPT_FLAG}}</span>
-          <div *ngIf="submitted && f.BL_LIST.controls[i].get('EXEMPT_FLAG').errors" class="invalid-feedback">
-            Exempt Flag is required
-          </div>
-        </td>
+          <td>
+            <input type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('REQUESTED_AMOUNT').errors}"
+              formControlName="REQUESTED_AMOUNT" class="form-control3" />
+            <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.REQUESTED_AMOUNT}}</span>
 
-      </tr>
+          </td>
 
-    </tbody>
+          <td>
+            <select class="form-control3" *ngIf="item.value.IS_SRRCHARGE != '1'" formControlName="CURRENCY"
+              [ngClass]="{'invalid': submitted && f.BL_LIST.controls[i].get('CURRENCY').errors}">
+              <option disabled="true">--Select--</option>
+              <option *ngFor="let item of CurrencyList" value="{{item.CODE}}">{{item.CODE}}</option>
+            </select>
+            <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.CURRENCY}}</span>
+          </td>
 
-  </table>
-  <div class="col-md-6 offset-md-5 text-end">
-    <button (click)="SubmitList()" class="form-btn me-2">
+          <td>
+            <input *ngIf="item.value.IS_SRRCHARGE != '1'" type="checkbox"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('EXEMPT_FLAG').errors}"
+              formControlName="EXEMPT_FLAG" />
+            <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.EXEMPT_FLAG}}</span>
+          </td>
+
+          <td>
+            <input class="form-control3" type="text"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('TAX').errors}" formControlName="TAX" />
+          </td>
+
+          <td>
+            <input class="form-control3" type="text"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('IGST').errors}" formControlName="IGST" />
+          </td>
+          <td>
+            <input class="form-control3" type="text"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('SGST').errors}" formControlName="SGST" />
+          </td>
+
+          <td>
+            <input class="form-control3" type="text"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('IGST').errors}" formControlName="IGST" />
+          </td>
+
+
+          <td>
+            <input class="form-control3" type="text"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('TAX_AMOUNT').errors}"
+              formControlName="TAX_AMOUNT" />
+          </td>
+
+          <td>
+            <input class="form-control3" type="text"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('TOTAL_AMOUNT').errors}"
+              formControlName="TOTAL_AMOUNT" />
+
+          </td>
+
+        </tr>
+
+      </tbody>
+
+    </table>
+  </div>
+  <div class="col-md-2 offset-md-10 mt-4 text-end">
+    <button (click)="SubmitList()" class="form-btn w-100">
       Submit
     </button>
   </div>
 </div>
-</div>
-
-
